test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u64_mul_const_eval_overflow/src/main.sw
script;

const RESULT: u64 = u64::max() * 2;

fn main() -> bool {
    log(RESULT);

    true
}
